# go_bench

./: .gitignore  README.md  gen_datasets.ipynb  go_bench_usage.ipynb  setup.cfg  setup.py  train_test_split.ipynb
data_splits/cluster50/: testing_ids.txt  training_ids.txt  validation_ids.txt
data_splits/random/: testing_ids.txt  training_ids.txt  validation_ids.txt
src/go_bench/: data_split.py  load_tools.py  metrics.py  neggoa.py  pipeline.py  processing.py  utils.py
src/go_bench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
