[metadata]
name = go-bench
version = 0.0.1
author = Andrew Dickson
author_email = amdickson@berkeley.edu
description = A set of pipeline tools for generating Gene Ontology annotation datasets. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src